styles and get rid of empty element styles

--- a/addWindow.html
+++ b/addWindow.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Add Item</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+
 </head>
 <body>
 <form>
