add item form style

--- a/addWindow.html
+++ b/addWindow.html
@@ -6,13 +6,15 @@
 
 </head>
 <body>
-<form>
-    <div>
-        <label>Enter Item</label>
-        <input type="text" id="item" autofocus>
-    </div>
-    <button type="submit">add item</button>
-</form>
+<div class="container">
+    <form>
+        <div>
+            <label>Enter Item</label>
+            <input type="text" id="item" autofocus>
+        </div>
+        <button class="btn waves-effect waves-light" type="submit">add item</button>
+    </form>
+</div>
 <script>
     const electron = require('electron');
     const {ipcRenderer} = electron;
